<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_solicitacaodados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_solicitacaodados"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ed_nomepaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ed_nomepaciente"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/ed_dataconsulta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ed_dataconsulta"
            android:inputType="date"
            android:textAlignment="center"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ed_horainicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ed_horainicio"
            android:inputType="time"
            android:textAlignment="center"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ed_horafim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ed_horafim"
            android:inputType="time"
            android:textAlignment="center"
            android:autofillHints="" />

        <TextView
            android:id="@+id/tv_tipoarquivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_tipoarquivo"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/sp_tipoarquivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sp_tipoarquivo"
            />

        <TextView
            android:id="@+id/tv_localescaneamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_localescaneamento"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/sp_localescaneamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_infolocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_infolocal"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tv_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_local" />

        <Button
            android:id="@+id/bt_copia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="inicio"
            android:text="@string/bt_copia" />
    </LinearLayout>
</ScrollView>